<resources>
    <string name="app_name">My Places</string>
    <!--    <string name="action_settings">Settings</string>-->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="my_places_list">My Places</string>
    <string name="about">About</string>
    <string name="about_text">Lorem ipsum dolor sit amet</string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="place1">Tvrdjava</string>
    <string name="place2">Cair</string>
    <string name="place3">Park Svetog Save</string>
    <string name="place4">Trg Kralja Milana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_name_prompt">Name:</string>
    <string name="edit_description_prompt">Description:</string>
    <string name="edit_btn_add">ADD</string>
    <string name="edit_btn_cancel">CANCEL</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="close">Close</string>
    <string name="btn_save">Save</string>
</resources>