<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentEdit">

    <TextView
        android:id="@+id/edit_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_name_prompt"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_name_prompt"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/edit_description_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="24dp"
        android:text="@string/edit_description_prompt"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_description_prompt"
        app:layout_constraintBottom_toTopOf="@id/text_longitude"
        android:layout_marginBottom="10dp"
                />

    <TextView
        android:id="@+id/text_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Longitude"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edittext_longitude"
        />
    <EditText
        android:id="@+id/edittext_longitude"
        android:layout_width="0dp"
        android:textAlignment="textStart"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_set"
        app:layout_constraintBottom_toTopOf="@id/text_latitude"
        />
    <TextView
        android:id="@+id/text_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Latitude"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edittext_latitude"
        />
    <EditText
        android:id="@+id/edittext_latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_set"
        app:layout_constraintBottom_toTopOf="@id/edit_btn_add"
        />
    <Button
        android:id="@+id/button_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittext_longitude"
        app:layout_constraintBottom_toTopOf="@id/edit_btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/edit_description"
        />

    <Button
        android:id="@+id/edit_btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/edit_btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_btn_cancel"
        />
    <Button
        android:id="@+id/edit_btn_cancel"
        android:layout_width="0dp"
        android:text="@string/edit_btn_cancel"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>